# clipd

./: Cargo.toml  LICENSE  README.md  SPEC-tier1-ai-memory.md  dist-windows-cross.sh  dist.ps1  dist.sh  install.ps1  install.sh  release.sh  vercel.json
.cargo/: config.toml
.claude/: launch.json
.github/workflows/: preview-binaries.yml  release.yml
Clipd.app/Contents/: Info.plist
Clipd.app/Contents/MacOS/: clipd-hud  clipd-ui
Clipd.app/Contents/_CodeSignature/: CodeResources
clipd-browser-extension/: README.md  background.js  content_script.js  manifest.json
clipd-cli/: Cargo.toml
clipd-cli/src/: main.rs
clipd-core/: Cargo.toml
clipd-core/src/: actions.rs  collections.rs  embedding.rs  images.rs  lib.rs  lock.rs  models.rs  paste_rules.rs  privacy.rs  semantic.rs  session.rs  slots.rs  snippets.rs  store.rs  telemetry.rs  theme.rs  transform.rs  vault.rs  watcher.rs
clipd-daemon/: Cargo.toml  build.rs
clipd-daemon/src/: daemon.rs  lib.rs
clipd-gui/: Cargo.toml  build.rs
clipd-gui/src/: main.rs  main.rs.bak
clipd-hud/: clipd-hud  clipd-hud.swift
clipd-mcp/: Cargo.toml
clipd-mcp/src/: main.rs
clipd-ocr/: clipd-ocr  clipd-ocr.swift
clipd-overlay/: Cargo.toml
clipd-overlay/src/: main.rs
clipd-picker/: Cargo.toml
clipd-picker/src/: main.rs
clipd-tui/: Cargo.toml
clipd-tui/src/: lib.rs  tui.rs
clipd-ui/: Cargo.toml  build.rs
clipd-ui/src/: main.rs
packaging/linux/: clipd.desktop  create-appimage.sh  create-deb.sh  install-desktop.sh
packaging/macos/: create-app-bundle.sh  create-dmg.sh
packaging/windows/: Clipd.bat  ClipdDebug.bat  ClipdTray.vbs  README.md  clipd-installer.nsi
telemetry-worker/: index.js  package.json  vercel.json  wrangler.toml
telemetry-worker/api/: count.js
