[workspace]
resolver = "2"
members = [
    "clipd-core",
    "clipd-daemon",
    "clipd-tui",
    "clipd-cli",
    "clipd-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "AI clipboard daemon for developers — multi-slot copy, searchable history, editor-native"

[workspace.dependencies]
clipd-core = { path = "clipd-core" }
clipd-daemon = { path = "clipd-daemon" }
clipd-tui = { path = "clipd-tui" }
arboard = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
sha2 = "0.10"
