[workspace]
resolver = "2"
members = [
    "clipd-core",
    "clipd-daemon",
    "clipd-tui",
    "clipd-cli",
    "clipd-ui",
    "clipd-gui",
    "clipd-overlay",
    "clipd-mcp",
]
exclude = ["third_party/rdev"]

# Vendored rdev 0.5.3 patched to avoid a macOS 15 (Sequoia) crash: upstream calls
# main-thread-only Text Input Source APIs from the background event-tap thread,
# which now hard-asserts (SIGTRAP) on the first key event. See third_party/rdev.
[patch.crates-io]
rdev = { path = "third_party/rdev" }

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "AI clipboard daemon for developers — multi-slot copy, searchable history, editor-native"

[workspace.dependencies]
clipd-core = { path = "clipd-core", features = ["telemetry"] }
clipd-daemon = { path = "clipd-daemon" }
clipd-tui = { path = "clipd-tui" }
arboard = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
sha2 = "0.10"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
