[package]
name = "clipd-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arboard = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
log = "0.4"
base64 = { workspace = true }
ureq = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
