[package]
name = "clipd-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Enable telemetry: requires CLIPD_TELEMETRY_ENDPOINT env var at compile time.
# Example: CLIPD_TELEMETRY_ENDPOINT=https://your-worker.workers.dev cargo build --release -p clipd-core
default = []
telemetry = []

[dependencies]
arboard = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
log = "0.4"
base64 = { workspace = true }
ureq = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Native macOS Keychain access (no `security` CLI, no terminal prompt, no argv).
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[dev-dependencies]
tempfile = "3"
