[package]
name = "clipd-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Enable telemetry: requires CLIPD_TELEMETRY_ENDPOINT env var at compile time.
# Example: CLIPD_TELEMETRY_ENDPOINT=https://your-worker.workers.dev cargo build --release -p clipd-core
default = []
telemetry = []

[dependencies]
arboard = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
log = "0.4"
base64 = { workspace = true }
ureq = { workspace = true }
# PNG encode/decode + thumbnailing for image clips (already in the tree via arboard).
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Native macOS Keychain access (no `security` CLI, no terminal prompt, no argv).
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

# Daemon-lock liveness check (OpenProcess) — the lock must know whether the
# PID in the lock file is still running.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
