[package]
name = "clipd-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clipd-core = { workspace = true }
arboard = { workspace = true }
chrono = { workspace = true }
global-hotkey = "0.6"
enigo = "0.2"
ctrlc = "3"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
rdev = { version = "0.5", features = ["unstable_grab"] }

# Windows: rdev with grab — the hook only ever suppresses the single armed
# letter (after Ctrl+C ×2 / Ctrl+V ×2); every other key passes straight through.
[target.'cfg(target_os = "windows")'.dependencies]
rdev = { version = "0.5", features = ["unstable_grab"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
notify-rust = "4"
