[package]
name = "clipd-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native GUI clipboard viewer for clipd"

[[bin]]
name = "clipd-gui"
path = "src/main.rs"

[dependencies]
clipd-core = { workspace = true }
eframe = "0.30"
arboard = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
log = "0.4"
env_logger = "0.11"

# Global mouse position, so the palette opens where the cursor is (Ctrl+G).
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
