[package]
name = "clipd-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Menu bar UI launcher for clipd daemon"

[[bin]]
name = "clipd-ui"
path = "src/main.rs"

[dependencies]
clipd-core = { workspace = true }
clipd-daemon = { workspace = true }
tao = "0.30"
tray-icon = "0.19"
dirs = "5"
log = "0.4"
env_logger = "0.11"
